src/objects/line_xo__c.object
<CustomObject>
    <fields>
        <fullName>abc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>供应商</label>
        <referenceTo>supply__c</referenceTo>
        <relationshipLabel>line xo</relationshipLabel>
        <relationshipName>line_xo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>monster hunter</label>
        <referenceTo>monster_hunter__c</referenceTo>
        <relationshipLabel>line xo</relationshipLabel>
        <relationshipName>line_xo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>test_pp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>romancesaga</label>
        <referenceTo>romancesaga__c</referenceTo>
        <relationshipLabel>line xo</relationshipLabel>
        <relationshipName>line_xo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test_xx__c</fullName>
        <label>test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>line xo</label>
    <nameField>
        <displayFormat>sanada-{000}</displayFormat>
        <label>line xo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>